--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "quiz-game-alfredo",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "dist/index.html",
   "scripts": {
     "start": "parcel serve ./src/index.html",
     "build": "parcel build ./src/index.html"
